Demonstrate how Popups setting can be registered
See upstream patch at
https://gerrit.wikimedia.org/r/c/mediawiki/extensions/Popups/+/859574

Change-Id: I4fc5ec5f200ec330c27916b31a40dbd951d5b0b6

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -3,5 +3,7 @@
 		"authors": [ "..." ]
 	},
 	"skinname-skinjson": "SkinJson (Debug)",
-	"skinname-desc": "An example skin showcasing the best practices"
+	"skinname-desc": "An example skin showcasing the best practices",
+	"popups-settings-option-skinjson-tooltip": "Show skin hints",
+	"popups-settings-option-skinjson-tooltip-description": "See hints on where MediaWiki extensions can extend the interface."
 }
